Feature/UI/tra 4390 status bar banner demo env (#921)
* no message

* banner styling condition added and button text transform disabled

* added prps to container

* build fix

--- a/ui-common/src/components/UI/style/StatusBar.module.sass
+++ b/ui-common/src/components/UI/style/StatusBar.module.sass
@@ -19,6 +19,9 @@
     overflow: hidden
     max-width: clamp(150px,50%,600px)
 
+    &.banner 
+        top: 53px
+
     .podsCount
         display: flex
         justify-content: center
