--- a/ui-common/src/components/UI/style/Spinner.module.sass
+++ b/ui-common/src/components/UI/style/Spinner.module.sass
@@ -1,7 +1,6 @@
-@import "../../variables.module"
+@import "../../../variables.module"
 
 .spinnerContainer
   display: flex
   justify-content: center
   margin-bottom: 10px
-  
