--- a/ui-common/src/components/ServiceMapModal/ServiceMapModal.module.sass
+++ b/ui-common/src/components/ServiceMapModal/ServiceMapModal.module.sass
@@ -53,7 +53,7 @@
 
   & .servicesFilterList
     overflow-y: auto
-    height: 92%
+    height: calc(100% - 30px - 5px)
 
 .separtorLine
   margin-top: 10px
