Fix screen layout (#993)
Co-authored-by: gadotroee <55343099+gadotroee@users.noreply.github.com>

--- a/ui-common/src/components/TrafficViewer/TrafficViewer.module.sass
+++ b/ui-common/src/components/TrafficViewer/TrafficViewer.module.sass
@@ -6,7 +6,7 @@
     flex-direction: column
     overflow: hidden
     flex-grow: 1
-    height: calc(100vh - 70px)
+    height: calc(100% - 70px)
 
     .TrafficPageHeader
         padding: 20px 24px
@@ -18,7 +18,7 @@
         .TrafficPageStreamStatus
                 display: flex
                 align-items: center
-                
+
 
 .TrafficPageHeaderImage
     width: 22px
