--- a/ui-common/src/components/ServiceMapModal/ServiceMapModal.module.sass
+++ b/ui-common/src/components/ServiceMapModal/ServiceMapModal.module.sass
@@ -2,7 +2,6 @@
 
 .modalContainer
   display: flex
-  flex-wrap: nowrap
   width: 100%
   height: 100%
 
@@ -11,8 +10,6 @@
 
 .filterSection
   flex: 15%
-  border-right: 1px solid $blue-color
-  margin-right: 2%
   height: 100%
 
   .filters table
@@ -38,6 +35,7 @@
   display: flex
   flex-direction: column
   margin-right: 10px
+  width: 100%
 
 .servicesFilterSearch
   width: calc(100% - 10px)
@@ -47,7 +45,7 @@
   margin-bottom: 5px
 
 .servicesFilter
-  margin-top: clamp(25px,15%,35px)
+  margin-top: 15px
   height: 100%
   overflow: hidden
 
