--- a/ui-common/src/components/UI/style/SelectList.module.sass
+++ b/ui-common/src/components/UI/style/SelectList.module.sass
@@ -3,6 +3,7 @@
 .selectListTable
     overflow: auto
     height: 100%
+    user-select: none // when resizble moved we get unwanted beheviour
 
     table
         width: 100%
