Fix/ui/Service-map-GUI-issues_TRA-4499 (#1034)
* LoadingOverlay z-index

* resizable max width
servicemap edges background color

* z-index as overlay

Co-authored-by: Leon <>

--- a/ui-common/src/components/style/LoadingOverlay.module.sass
+++ b/ui-common/src/components/style/LoadingOverlay.module.sass
@@ -8,6 +8,7 @@
     align-items: center
     justify-content: center
     background-color: rgba(25, 25, 25, 0.5)
+    z-index: 1000
 
 .loadingOverlaySpinner
     width: 60px
