searchable dropdown added to oas modal (#1044)
* searchable dropdown added to oas modal

* remove unnecessary attribute from autocomplete

* move css to sass file

--- a/ui-common/src/components/OasModal/OasModal.module.sass
+++ b/ui-common/src/components/OasModal/OasModal.module.sass
@@ -32,6 +32,9 @@
     overflow-y: scroll
 
 .borderLine
-  border-top: 1px solid #dee6fe
-  margin-bottom: 1%
+    border-top: 1px solid #dee6fe
+    margin-bottom: 1%
+
+.root
+    width: 100%
 
