update close icon in oas and service map modals (#1066)
* changed icon

* close icon postion

* linter fixes

* make onSelectedOASService as callback function

* removing lint warning

* small fix

Co-authored-by: Leon <>

--- a/ui-common/src/components/ServiceMapModal/ServiceMapModal.module.sass
+++ b/ui-common/src/components/ServiceMapModal/ServiceMapModal.module.sass
@@ -56,3 +56,9 @@
 .separtorLine
   margin-top: 10px
   border: 1px solid #E9EBF8
+
+.closeIcon
+  cursor: pointer
+  user-select: none
+  margin-top: -15px
+  margin-right: 5px
