--- a/ui-common/src/components/UI/style/SelectList.module.sass
+++ b/ui-common/src/components/UI/style/SelectList.module.sass
@@ -1,4 +1,6 @@
 @import '../../../variables.module'
+@import '../../../components'
+      
 
 .selectListTable
     overflow: auto
@@ -17,6 +19,7 @@
             position: sticky
             top: 0
             background: $main-background-color
+            font-size: 12px
 
         tr
             border-bottom-width: 1px
@@ -27,7 +30,15 @@
         td
             color: $light-gray
             padding: 10px
-            font-size: 16px
+            font-size: 11px
+            font-weight: 600
+            padding-top: 5px
+            padding-bottom: 5px
 
 .nowrap
     white-space: nowrap
+
+.totalSelected
+  font-size: 12px
+  color: $light-blue-color
+  font-weight: 700
