--- a/ui-common/src/components/ServiceMapModal/ServiceMapModal.module.sass
+++ b/ui-common/src/components/ServiceMapModal/ServiceMapModal.module.sass
@@ -67,7 +67,6 @@
   height: 100%
   display: flex
   flex-direction: column
-  margin-right: 10px
   width: 100%
   border-radius: 4px
 
@@ -82,17 +81,18 @@
   margin-top: 10px
   margin-right: 10px
 
-.protocolsFilterList, .servicesFilter
+.card
   background: white
   padding: 10px
   border-radius: 4px
   user-select: none
+  box-shadow: 0px 1px 5px #979797
 
-.servicesFilter
-  margin-top: 10px
+.servicesFilterWrapper
+  margin-top: 20px
+  margin-bottom: 3px
   height: 100%
   overflow: hidden
-  border-radius: 4px
 
-  & .servicesFilterList
-    height: calc(100% - 30px - 52px)
+.servicesFilterList
+  height: calc(100% - 30px - 52px)
