--- a/ui-common/src/components/UI/style/SelectList.module.sass
+++ b/ui-common/src/components/UI/style/SelectList.module.sass
@@ -50,10 +50,9 @@
     td
         color: $light-gray
         padding: 10px
-        font-size: 11px
+        font-size: 15px
         font-weight: 600
-        padding-top: 5px
-        padding-bottom: 5px
+        padding: 10px
 
 .nowrap
     white-space: nowrap
