remove poweredBy by display none the css calss (#1126)

--- a/ui/src/index.sass
+++ b/ui/src/index.sass
@@ -152,7 +152,7 @@ button
   display: none
 
   // remove powerdby
-.sc-ilfuhL
+.sc-kYWVYA
   display: none !important
 
 // enable view elements inside redoc  
