list takes 100% from parent (#1129)
Co-authored-by: Leon <>

--- a/ui-common/src/components/UI/style/SelectList.module.sass
+++ b/ui-common/src/components/UI/style/SelectList.module.sass
@@ -3,7 +3,7 @@
 
 .selectListTable
     user-select: none // when resizble moved we get unwanted beheviour
-    height: 100%
+    height: calc(100% - 53px)
 
     table
         width: 100%
