TRA_4623 - methods view on timeline stats with coordination to the pie stats (#1175)
* Add select protocol → when selected, the view will be on commands of that exact protocol

* CR fixes

* added const instead of free string

* remove redundant sass file

--- a/ui-common/src/components/modals/TrafficStatsModal/TrafficStatsModal.module.sass
+++ b/ui-common/src/components/modals/TrafficStatsModal/TrafficStatsModal.module.sass
@@ -1,3 +1,6 @@
+.headlineContainer
+  display: flex
+
 .title
   color: #494677
   font-family: Source Sans Pro,Lucida Grande,Tahoma,sans-serif
@@ -12,6 +15,11 @@
 .mainContainer
   padding: 30px
   text-align: center
+
+.selectContainer
+  display: flex
+  justify-content: space-evenly
+  margin-bottom: 4%
 
 .select
   border: none
