Ui/TRA-4607 - replay mizu requests (#1165)
* modal & keyValueTable added

* added pulse animation
KeyValueTable Behavior improved
CodeEditor addded

* style changed

* codeEditor styling
support query params

* send request data

* finally stop loading

* select width

* methods and requesr format

* icon changed & moved near request tab

* accordions added and response presented

* 2 way params biding

* remove redundant

* host path fixed

* fix path input

* icon styles

* fallback for format body

* refresh button

* changes

* remove redundant

* closing tag

* capitilized character

* PR comments

* removed props

* small changes

* color added to reponse data

Co-authored-by: Leon <>

--- a/ui-common/src/components/TrafficViewer/TrafficViewer.module.sass
+++ b/ui-common/src/components/TrafficViewer/TrafficViewer.module.sass
@@ -88,8 +88,17 @@
 .greenIndicatorContainer
     border: 2px #6fcf9770 solid
 
+@keyframes biggerIndication 
+    0%
+        transform: scale(2.0)
+    100% 
+        transform: scale(0.7)
+    
+
+
 .greenIndicator
     background-color: #27AE60
+    animation: biggerIndication 1.5s ease-out 0s alternate infinite none running
 
 .orangeIndicatorContainer
     border: 2px #fabd5970 solid
