--- a/ui-common/src/components/modals/ServiceMapModal/ServiceMapModal.module.sass
+++ b/ui-common/src/components/modals/ServiceMapModal/ServiceMapModal.module.sass
@@ -1,6 +1,8 @@
 @import "../../../variables.module"
 @import "../../../components"
 
+$modalMargin-from-edge : 35px
+
 .closeIcon
   position: absolute
   right: 20px
@@ -24,7 +26,7 @@
   display: flex
   align-content: center
   align-items: center
-  margin-left: 35px
+  margin-left: $modalMargin-from-edge
   margin-bottom: 25px
   margin-top: 25px
 
