move icon to right side (#1185)
Co-authored-by: Leon <>

--- a/ui-common/src/components/EntryDetailed/EntryViewer/EntryViewer.module.sass
+++ b/ui-common/src/components/EntryDetailed/EntryViewer/EntryViewer.module.sass
@@ -52,8 +52,13 @@
         border-radius: 4px
         padding: 10px
         position: relative
+        
         .bodyHeader
             padding: 0 1rem
+            display: flex
+            align-items: center
+            justify-content: space-between
+
         .endpointURL
             font-size: .75rem
             display: block
