warning cleaning from console (#1187)
* warning cleaning from console

* code cleaning

--- a/ui-common/src/components/modals/ServiceMapModal/ServiceMapModal.module.sass
+++ b/ui-common/src/components/modals/ServiceMapModal/ServiceMapModal.module.sass
@@ -74,6 +74,7 @@ $modalMargin-from-edge : 35px
   width: -moz-available
   width: -webkit-fill-available
   width: fill-available
+  width: strech
   max-width: 200px
   box-shadow: 0px 1px 5px #979797
   margin-left: 10px
