--- a/ui-common/src/components/modals/ReplayRequestModal/ReplayRequestModal.module.sass
+++ b/ui-common/src/components/modals/ReplayRequestModal/ReplayRequestModal.module.sass
@@ -79,5 +79,12 @@
     overflow: hidden
     
     b::after
-       content: '\b'
+        content: '\b'
         display: inline
+
+.icon
+    width: 24px
+    height: 26px
+    stroke-width: 0px
+    fill: $blue-color
+    stroke: $blue-color
