--- a/ui-common/src/components/modals/ServiceMapModal/ServiceMapModal.module.sass
+++ b/ui-common/src/components/modals/ServiceMapModal/ServiceMapModal.module.sass
@@ -35,6 +35,7 @@ $modalMargin-from-edge : 35px
     color: $blue-gray
     font-weight: 600
     margin-right: 35px
+    white-space: nowrap
 
 .graphSection
   flex: 85%
