ui/ include scss files in common (#1195)
* include scss files

* exported color

Co-authored-by: Leon <>

--- a/ui-common/src/variables.module.scss
+++ b/ui-common/src/variables.module.scss
@@ -25,4 +25,5 @@ $light-gray: #8F9BB2;
   failureColor: $failure-color;
   blueGray: $blue-gray;
   lightGray: $light-gray;
+  contentSectionColor: $content-section-color;
 }
