Add time range to stats  (#1199)

--- a/ui-common/src/components/modals/TrafficStatsModal/TrafficStatsModal.module.sass
+++ b/ui-common/src/components/modals/TrafficStatsModal/TrafficStatsModal.module.sass
@@ -13,12 +13,12 @@
   top: 20px
 
 .mainContainer
-  padding: 30px
   text-align: center
 
 .selectContainer
   display: flex
   justify-content: space-evenly
+  align-items: center
   margin-bottom: 4%
 
 .select
