--- a/ui-common/src/components/modals/TrafficStatsModal/TimelineBarChart/TimelineBarChart.module.sass
+++ b/ui-common/src/components/modals/TrafficStatsModal/TimelineBarChart/TimelineBarChart.module.sass
@@ -1,3 +1,5 @@
+@import  "../../../../variables.module"
+
 .barChartContainer
     width: 100%
     display: flex 
@@ -6,3 +8,4 @@
 .axisText
     font-size: 12px
     opacity: 0.9
+    font-family: $text-font-family
